# adaptive-learning-system

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: a550899201fc_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: distillation.py  ingestion.py  test_generation.py
backend/app/api/: documents.py  exams.py
backend/app/models/: __init__.py  concept.py  document.py  exam.py  user.py
backend/app/schemas/: concept.py  document.py  exam.py
backend/app/services/: document_service.py  exam_service.py  mastery_service.py
docs/: architecture.md  data-flow.md  makefile-guide.md  test-plan.md
docs/adr/: 001-bkt-over-irt.md  002-pgvector-over-pinecone.md  003-multi-pass-grading.md  004-knowledge-graph-over-embeddings.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/documents/[id]/: page.tsx
frontend/src/app/exams/[id]/: page.tsx
frontend/src/lib/: api.ts
